bindings/chicken/cvpi/cvpi.scm

;; This file is part of CVPI.
;; 
;; Copyright (C) 2015
;; 
;; This program is free software: you can redistribute it and/or
;; modify it under the terms of the GNU Lesser General Public License
;; as published by the Free Software Foundation, either version 3 of
;; the License, or (at your option) any later version.
;; 
;; This program is distributed in the hope that it will be useful,
;; but WITHOUT ANY WARRANTY; without even the implied warranty of
;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
;; GNU Lesser General Public License for more details.
;; 
;; You should have received a copy of the GNU Lesser General Public License
;; along with this program.  If not, see <http://www.gnu.org/licenses/>.

#>
#if HAVE_BCM_HOST == 1
int have_bcm_host = 1
#else
int have_bcm_host = 0
#endif
<#

(define-foreign-variable HAVE_BCM_HOST int "have_bcm_host")
(define-syntax macro-if
  (ir-macro-transformer
   (lambda (form inject compare)
       (if (cadr form)
	   `(begin ,(caddr form))
	   `(begin ,@(cdddr form))))))

;;; ffi for cvpi
(foreign-declare "#include <VG/openvg.h>")
(foreign-declare "#include <cvpi.h>")
;; (foreign-declare "#include <cvpi_base.h>") 
;; (foreign-declare "#include <cvpi_egl_config.h>") 
;; (foreign-declare "#include <cvpi_image_functions.h>")
;; (foreign-declare "#include <cvpi_image_headers.h>")
;; (foreign-declare "#include <cvpi_vg_ext.h>")
;;; cvpi_base.h
(define-foreign-type EGLint int)

(define-foreign-type CVPI_BOOL int)
(define CVPI_TRUE_TEST (foreign-lambda int "CVPI_TRUE_TEST" CVPI_BOOL))
(define CVPI_FALSE_TEST (foreign-lambda int "CVPI_FALSE_TEST" CVPI_BOOL))
(define-foreign-variable CVPI_TRUE (const CVPI_BOOL) "CVPI_TRUE")
(define-foreign-variable CVPI_FALSE (const CVPI_BOOL) "CVPI_FALSE")
(define CVPI_NOT (foreign-lambda CVPI_BOOL "CVPI_NOT" CVPI_BOOL))

;;; cvpi_egl_config.h
(define-foreign-variable EGL_CONFIG_MAX_WIDTH (const int) "EGL_CONFIG_MAX_WIDTH")
(define-foreign-variable EGL_CONFIG_MAX_HEIGHT (const int) "EGL_CONFIG_MAX_HEIGHT")

(conditional-code (eq? 1 HAVE_BCM_HOST)
    (define-foreign-variable CVPI_EGL_DEFAULT_PIXEL_FORMAT (const int) "CVPI_EGL_DEFAULT_PIXEL_FORMAT")
    (define-foreign-enum-type (cvpi_egl_pixel_format int cvpi_egl_ARGB_8888)
      (cvpi_egl_pixel_format->int int->cvpi_egl_pixel_format)
      cvpi_egl_ARGB_8888_PRE
      cvpi_egl_ARGB_8888    
      cvpi_egl_XRGB_8888    
      cvpi_egl_RGB_565      
      cvpi_egl_A_8)
      
    (define-foreign-enum-type (cvpi_egl_pixel_format_brcm int cvpi_egl_pixel_format_brcm_none)
      (cvpi_egl_pixel_format_brcm->int int->cvpi_egl_pixel_format_brcm)
      cvpi_egl_pixel_format_gles2_texture_brcm
      cvpi_egl_pixel_format_gles_texture_brcm
      cvpi_egl_pixel_format_render_gles2_brcm
      cvpi_egl_pixel_format_render_gles_brcm
      cvpi_egl_pixel_format_render_gl_brcm
      cvpi_egl_pixel_format_render_mask_brcm
      cvpi_egl_pixel_format_render_vg_brcm  
      cvpi_egl_pixel_format_texture_mask_brcm
      cvpi_egl_pixel_format_usage_mask_brcm  
      cvpi_egl_pixel_format_vg_image_brcm    
      cvpi_egl_pixel_format_brcm_none))

(define-foreign-enum-type (cvpi_egl_surface_bits int cvpi_egl_surface_bits_dc)
  (cvpi_egl_surface_bits->int int->cvpi_egl_surface_bits)
  cvpi_egl_surface_bits_pbuffer
  cvpi_egl_surface_bits_pixmap 
  cvpi_egl_surface_bits_window 
  cvpi_egl_surface_bits_colorspace
  cvpi_egl_surface_bits_alpha 
  cvpi_egl_surface_bits_multisample
  cvpi_egl_surface_bits_swap
  cvpi_egl_surface_bits_dc)

	 (define-foreign-enum-type (cvpi_egl_renderable_bits int cvpi_egl_renderable_bits_openvg)
	   (cvpi_egl_renderable_bits->int int->cvpi_egl_renderable_bits)
	   cvpi_egl_renderable_bits_opengl_es
	   cvpi_egl_renderable_bits_openvg
	   cvpi_egl_renderable_bits_opengl_es2
	   cvpi_egl_renderable_bits_opengl)

(define-foreign-enum-type (cvpi_egl_transparent_type int cvpi_egl_transparent_type_none)
  (cvpi_egl_transparent_type->int int->cvpi_egl_transparent_type)
  cvpi_egl_transparent_type_dc
  cvpi_egl_transparent_type_none
  cvpi_egl_transparent_type_rgb)

(define-foreign-enum-type (cvpi_egl_color_buffer_type int cvpi_egl_color_buffer_type_rgb)
  (cvpi_egl_color_buffer_type->int int->cvpi_egl_color_buffer_type)
  cvpi_egl_color_buffer_type_dc
  cvpi_egl_color_buffer_type_rgb
  cvpi_egl_color_buffer_type_luminance)

(define-foreign-enum-type (cvpi_egl_config_caveat int cvpi_egl_config_caveat_none)
  (cvpi_egl_config_caveat->int int->cvpi_egl_config_caveat)
  cvpi_egl_config_caveat_dc
  cvpi_egl_config_caveat_none
  cvpi_egl_config_caveat_slow
  cvpi_egl_config_caveat_nonconformant)

(define-foreign-enum-type (cvpi_egl_renderable_api int cvpi_egl_renderable_api_openvg)
  (cvpi_egl_renderable_api->int int->cvpi_egl_renderable_api)
  cvpi_egl_renderable_api_openvg
  cvpi_egl_renderable_api_opengl
  cvpi_egl_renderable_api_current)

(define-foreign-enum-type (cvpi_egl_conformant_bits int cvpi_egl_conformant_bit_openvg)
  (cvpi_egl_conformant_bits->int int->cvpi_egl_conformant_bits)
  cvpi_egl_conformant_bit_dc
  cvpi_egl_conformant_bit_opengl
  cvpi_egl_conformant_bit_opengl_es
  cvpi_egl_conformant_bit_opengl_es2
  cvpi_egl_conformant_bit_openvg)

(define-foreign-enum-type (CVPI_EGLBoolean int CVPI_EGL_DONT_CARE)
  (CVPI_EGLBoolean->int int->CVPI_EGLBoolean)
  CVPI_EGL_TRUE
  CVPI_EGL_FALSE
  CVPI_EGL_DONT_CARE)

(define-foreign-enum-type (cvpi_egl_current_surface_type int cvpi_egl_surface_type_none)
  (cvpi_egl_current_surface_type->int int->cvpi_egl_current_surface_type)
  cvpi_egl_surface_type_none
  cvpi_egl_surface_type_pixmap
  cvpi_egl_surface_type_pbuffer
  cvpi_egl_surface_type_window)

(define-foreign-enum-type (cvpi_egl_samples int cvpi_egl_samples_zero)
  (cvpi_egl_samples->int int->cvpi_egl_samples)
  cvpi_egl_samples_zero
  cvpi_egl_samples_one)


(define-foreign-type cvpi_egl_instance (c-pointer (struct "cvpi_egl_instance_s")))
(define-foreign-type cvpi_egl_settings (c-pointer (struct "cvpi_egl_settings_s")))

(define cvpi_egl_settings_create (foreign-lambda cvpi_egl_settings "cvpi_egl_settings_create"))
(define cvpi_egl_instance_setup (foreign-lambda cvpi_egl_instance "cvpi_egl_instance_setup" cvpi_egl_settings))
(define cvpi_egl_instance_takedown (foreign-lambda void "cvpi_egl_instance_takedown" cvpi_egl_instance))

(define-foreign-enum-type (cvpi_egl_settings_change int cvpi_egl_settings_add)
  (cvpi_egl_settings_change->int int->cvpi_egl_settings_change)
  cvpi_egl_settings_add cvpi_egl_settings_remove)
